<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Fragment.LogInFragment"
    android:paddingTop="@dimen/scale_40dp">

    <TextView
        android:id="@+id/login_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:gravity="center"
        android:layout_marginBottom="@dimen/scale_15dp"
        android:textSize="@dimen/scale_16sp"
        android:textColor="@color/lightGrey"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        android:layout_marginTop="@dimen/scale_20dp"
        android:layout_marginStart="@dimen/scale_20dp"
        android:layout_marginEnd="@dimen/scale_20dp"
        android:layout_below="@id/login_header_tv"
        app:boxBackgroundColor="@color/sdkThemeColorPrimary"
        app:hintTextColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center_vertical"
            android:textSize="@dimen/scale_16sp"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="@dimen/scale_15dp"
            android:background="@android:color/white"
            android:textColor="@color/darkGrey"
            android:hint="@string/enter_name"
            android:padding="@dimen/scale_5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaid_id_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_id"
        app:boxBackgroundMode="none"
        android:layout_marginTop="@dimen/scale_15dp"
        android:layout_marginStart="@dimen/scale_20dp"
        android:layout_marginEnd="@dimen/scale_20dp"
        android:layout_below="@id/username_til"
        app:boxBackgroundColor="@color/sdkThemeColorPrimary"
        app:hintTextColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/scale_16sp"
            android:drawableStart="@drawable/ic_mail_"
            android:drawablePadding="@dimen/scale_15dp"
            android:background="@android:color/white"
            android:textColor="@color/darkGrey"
            android:hint="@string/enter_email_id"
            android:padding="@dimen/scale_5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_number"
        app:boxBackgroundMode="none"
        android:layout_marginTop="@dimen/scale_15dp"
        android:layout_marginStart="@dimen/scale_20dp"
        android:layout_marginEnd="@dimen/scale_20dp"
        android:layout_marginBottom="@dimen/scale_30dp"
        android:layout_below="@id/emaid_id_til"
        app:boxBackgroundColor="@color/sdkThemeColorPrimary"
        app:hintTextColor="@color/lightGrey"
        android:textColorHint="@color/lightGrey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mob_number_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/scale_16sp"
            android:hint="@string/enter_mobile_number"
            android:drawableStart="@drawable/ic_mobile_number"
            android:drawablePadding="@dimen/scale_15dp"
            android:inputType="phone"
            android:background="@android:color/white"
            android:textColor="@color/darkGrey"
            android:padding="@dimen/scale_5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/proceed_btn_sdk_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_number_til"
        android:layout_marginTop="@dimen/scale_40dp"
        android:layout_marginBottom="@dimen/scale_40dp"
        android:layout_centerHorizontal="true"
        android:background="@color/sdkThemeColorPrimary"
        android:text="@string/proceed"
        android:textSize="@dimen/scale_16sp"
        android:textColor="@android:color/white"
        android:paddingStart="@dimen/scale_40dp"
        android:paddingEnd="@dimen/scale_40dp"/>

</RelativeLayout>